// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/ProjectInfoFormWrapper_DEPRECATED Create 1`] = `
<div>
  <h2
    className="text-3xl text-purple font-headline font-bold"
  >
    Projekt erstellen
  </h2>
  <form
    className="mt-4"
    id="create-project-form"
    noValidate={true}
  >
    <h1>
      Insert here: a create project form
    </h1>
  </form>
  <footer
    className="mt-24"
  >
    <div
      className="flex justify-end"
    >
      <button
        className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
        onClick={[Function]}
        type="button"
      >
        Abbrechen
      </button>
      <input
        className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green ml-4"
        form="create-project-form"
        type="submit"
        value="Weiter"
        variant="primary"
      />
    </div>
  </footer>
</div>
`;

exports[`Storyshots Forms/ProjectInfoFormWrapper_DEPRECATED Edit 1`] = `
<div>
  <h2
    className="text-3xl text-purple font-headline font-bold"
  >
    Projekt bearbeiten
  </h2>
  <form
    className="mt-4"
    id="edit-project-form"
    noValidate={true}
  >
    <h1>
      Insert here: an edit project form
    </h1>
  </form>
  <footer
    className="mt-24"
  >
    <div
      className="flex place-content-between"
    >
      <button
        className="text-error focus-offset"
        onClick={[Function]}
      >
        Projekt löschen
      </button>
      <div>
        <button
          className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green border border-purple hover:bg-opacity-10 hover:bg-green hover:border-green"
          onClick={[Function]}
          type="button"
        >
          Abbrechen
        </button>
        <input
          className="inline-block text-lg px-4 py-2 font-headline transition cursor-pointer focus-offset focus:ring-green bg-purple text-white font-bold hover:bg-blue hover:text-green ml-4"
          form="edit-project-form"
          type="submit"
          value="Speichern"
          variant="primary"
        />
      </div>
    </div>
  </footer>
</div>
`;
